--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ a{
     box-shadow: 1px 3px 10px #e9ecef;
 }
 .text-dark{
-    color: var(--border);
+    color: var(--dark);
 }
 .inline{
     display: inline-block;
@@ -118,4 +118,97 @@ table{
         border: none;
         position: relative;
     }
+}
+
+/* add user and update user page styling */
+.form-title{
+    margin-top: 2em;
+}
+.form-title>h2{
+    padding: .5em 0;
+}
+.new-user{
+    max-width:786px ;
+    margin:auto;
+}
+#update-user .form-group,
+#add-user .form-group{
+    margin:.4em 0;
+}
+#update-user .form-group input[type="text"],
+#add-user .form-group input[type="text"],
+#update-user .form-group input[type="email"],
+#add-user .form-group input[type="email"]
+{
+    width: 100%;
+    padding: .6em 1em;
+    margin: .5em 0;
+    border:1px solid var(--border);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1em;
+    border-radius: .2em;
+}
+
+#update-user .form-group .radio,
+#add-user .form-group .radio{
+    margin: 1em 2em;
+}
+
+/* radio style  */
+.radio input[type="radio"]{
+    position: absolute;
+    opacity:0;
+}
+.radio input[type="radio"] + .radio-label:before{
+    content:"";
+    background: var(--border-btn);
+    border-radius: 100%;
+    border:1px solid  var(--border);
+    display: inline-block;
+    width: 1em;
+    height:1em;
+    position: relative;
+    top: -0em;
+    margin-right: .5em;
+    vertical-align: top;
+    cursor: pointer;
+    text-align: center;
+    -webkit-transition:all 250ms ease;
+    transition: all 250ms ease;
+}
+
+.radio input[type="radio"]:checked + .radio-label:before{
+    background-color: blue;
+    box-shadow: inset 0 0 0 4px lightblue;
+}
+
+.radio input[type="radio"]:focus + .radio-label:before{
+    outline: none;
+    border-color: lightgray;
+}
+.radio input[type="radio"]:disabled + .radio-label:before{
+    box-shadow: inset 0 0 0 4px lightblue;
+    border-color: lightskyblue;
+    background: lightpink;
+}
+
+#update-user .form-group .btn,
+#add-user .form-group .btn
+{
+    width:100%;
+    padding: .4em 1em;
+    background-color: darkslategray;
+    border:none;
+    font-family: 'Times New Roman', Times, serif;
+    color: var(--light);
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: .2em;
+    margin: .5em 0;
+
+}
+#update-user .form-group .btn:hover,
+#add-user .form-group .btn:hover{
+    background-color: var(--light);
+    color: var(--dark);
 }
