--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="container">
                 <div class="text-center">
-                    <a href="/" class="nav-brand text-dark">User Registration System</a>
+                    <a href="/" class="nav-brand text-light">User Registration System</a>
                 </div>
             </div>
         </nav>
