--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,39 @@
 <%-include('include/_header')%>
 
 
+<!-- main  -->
+<main id="main-site">
+    <div class="container">
+        <div class="box-nav d-flex jusitfy-between">
+            <a href="/add-user" class="border-shadow">
+            <span class="text-gradient">
+                New User <i class="fas fa-user"></i>
+            </span>
+        </a>
+        </div>
 
+<form action="/" method="POST">
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Gender</th>
+                <th>Status</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <%-include('include/_show')%>
+            
+        </tbody>
+    </table>
+</form>
+</div>
+</main>
 
-
+<!-- main end  -->
 
 
 
@@ -14,4 +44,4 @@
 
 
 <!-- include footer  -->
-<%-include('include/_header')%>
+<%-include('include/_footer')%>
