--- a/views/add-user.ejs
+++ b/views/add-user.ejs
@@ -18,7 +18,7 @@
 
 
 <!-- include form  -->
-<form method="POST" id="add-user">
+<form action="/api/users" method="POST" id="add-user">
     <div class="new-user">
         <div class="form-group">
             <label for="name" class="text-light">Name</label>
